# flutter_app

./: .gitignore  README.md  emulatorRun.sh  pubspec.yaml
android/: build.gradle
android/app/: build.gradle
demo/04.flutter-bili/: README.md  pubspec.yaml
demo/05.getx/: pubspec.yaml
demo/06.Flutter-Daily-Task/: pubspec.yaml
demo/07.win_ui/: README.md  pubspec.yaml
demo/09.frb-seaorm/: README.md  pubspec.yaml
demo/11.frb_test2/: README.md  pubspec.yaml
demo/13.frb_web/: README.md  pubspec.yaml
demo/daydayup/: README.md  pubspec.yaml
demo/flutter_rust_bridge_demo1/: README.md  pubspec.yaml
demo/flutter_rust_bridge_template/: .gitignore  README.md  pubspec.yaml
demo/hotfix/: README.md  pubspec.yaml
demo/lib_001.底部导航栏制作/: main_back.dart
demo/lib_003.路由跳转的动画效果快进慢出/: custom_router.dart
demo/lib_006.保持页面状态/: main.dart
demo/lib_007.不简单的搜索条/: asset.dart  search_bar_demo.dart
demo/lib_008.Wrap规则流失布局/: warp_demo.dart
demo/lib_009.展开闭合ExpansionTile/: expansion_tile.dart
demo/lib_012.波浪形贝塞尔曲线ClipPath/: main.dart
demo/lib_013.打开应用的闪屏动画/: home_page.dart
demo/lib_014.右滑返回上一页CupertinoPageRoute/: right_back_demo.dart
demo/lib_016.Draggable控件实例/: draggable_demo.dart  main.dart
demo/lib_06.保持页面状态/: keep_alive_demo.dart
demo/mh/: README.md  (+1 more)
demo/mh-server/: Cargo.toml  README.md  fleet.toml
demo/mh-server/.cargo/: config.toml
demo/mh-server/src/: main.rs
lib/: bottom_app_bar_demo.dart  bottom_navigation_widget.dart  custom_router.dart  main.dart
lib_bottom_navigation_widget/: main.dart
linux/: CMakeLists.txt
test/: widget_test.dart
(+580 files in other folders)
